<resources>
    <string name="app_name">Daraz_Clone_Project</string>
    <string name="shop_over_20_million_products_at_unbeatable_prices">SHOP OVER 20 \n MILLION PRODUCTS AT \n UNBEATABLE PRICES</string>
    <string name="don_t_you_have_an_account">Don\'t you have an Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="enter_your_full_name">Enter your full Name</string>
    <string name="todo">TODO</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="first_slide">Chose your Products</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide">Good Services</string>
    <string name="description">Lorem ipsum it just the dummy text used by industries </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>