<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5900"
    android:orientation="vertical"
    tools:context=".activities.RegistrationActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF5900"
        android:contentDescription="@string/todo"
        android:src="@drawable/daraz"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/shop_over_20_million_products_at_unbeatable_prices"
        android:lines="3"
        android:maxLines="5"
        android:ellipsize="end"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/enter_your_password"
        android:inputType="numberPassword"
        android:padding="15dp"
        android:textColor="@color/black" />

    <Button
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="LogIn"
        android:padding="15dp"
        android:text="Log In"
        android:textAllCaps="false"
        android:textColor="#FF5900"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="signUp"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

</LinearLayout>
